--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -31,4 +31,8 @@
         </ion-list>
         <ion-button color="dark" expand="block"  type="ngSubmit">Iniciar</ion-button>
     </form>
+
+    <!-- <button class="button" (click)=onLoginFacebook()>
+      Login con FB
+    </button> -->
 </ion-content>
