--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+
 }
 
 .contenedor-iconos {
@@ -72,6 +73,8 @@ ion-label {
 }
 
 .menu {
+    margin-right: 5%;
+    margin-left: 5%;
     height: 10%;
 }
 
@@ -104,4 +107,3 @@ ion-card {
     margin-right: 3%;
     padding: 0;
 }
-
