--- a/src/app/pages/where-sleep/where-sleep.page.scss
+++ b/src/app/pages/where-sleep/where-sleep.page.scss
@@ -8,20 +8,21 @@ ion-avatar>img {
     border-radius: 15% !important;
     height: 100%;
     width: 100%;
+    border: 0.5px solid black;
 }
 
 ion-item {
     margin-top: 4%;
 }
 
-ion-img{
-	width: 12%;
-	margin-left: 8%;
+ion-img {
+    width: 12%;
+    margin-left: 8%;
 }
 
-ion-title{
-	color: #B3B0B0;
-	font-weight: 700;
+ion-title {
+    color: #B3B0B0;
+    font-weight: 700;
 }
 
 h2 {
@@ -43,7 +44,7 @@ span {
 
 .padre {
     width: 100%;
-    height: 100%;
+    height: 80%;
     display: flex;
     flex-direction: row;
     margin: 3% 0 3% 0;
@@ -58,7 +59,7 @@ span {
     margin-left: 5%;
 }
 
-.infoAbajo {
-    bottom: 0;
-    position: absolute;
-}
+// .infoAbajo {
+//     bottom: 0;
+//     position: relative;
+// }
