--- a/src/app/pages/where-eat/where-eat.page.scss
+++ b/src/app/pages/where-eat/where-eat.page.scss
@@ -8,6 +8,7 @@ ion-avatar>img {
     border-radius: 15% !important;
     height: 100%;
     width: 100%;
+    border: 0.5px solid black;
 }
 
 ion-item {
@@ -43,7 +44,7 @@ span {
 
 .padre {
     width: 100%;
-    height: 100%;
+    height: 80%;
     display: flex;
     flex-direction: row;
     margin: 3% 0 3% 0;
@@ -60,5 +61,5 @@ span {
 
 .infoAbajo {
     bottom: 0;
-    position: absolute;
+    position: relative;
 }
