se crean paginas de mapas rural y urbano

--- a/src/app/pages/circuits/circuits.page.html
+++ b/src/app/pages/circuits/circuits.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 <ion-content>
     <ion-searchbar placeholder="¡Elegí tu itinerario!"></ion-searchbar>
-    <ion-card *ngFor="let item of tipoCircuito">
+    <ion-card *ngFor="let item of tipoCircuito" routerLink="/{{item.nombre}}">
         <ion-card-header color="circuits">
             {{ item.nombre }}
         </ion-card-header>
