--- a/src/app/pages/rural-circuit/rural-circuit.page.html
+++ b/src/app/pages/rural-circuit/rural-circuit.page.html
@@ -1,9 +1,10 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>rural_circuit</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>rural_circuit</ion-title>
+    </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
+    <div id="contenedor">
+        <div id="mapaRural"></div>
+    </div>
 </ion-content>
