--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -53,7 +53,7 @@
                     <ion-card>
                         <ion-card-header color="options">
                             <ion-card-title class="cardTitle">
-                                <div style="text-align: left">{{ item.nombre }}<span class="categoria">&nbsp;(Rural)</span>
+                                <div style="text-align: left">{{ item.nombre }}<span class="categoria">&nbsp;({{item.tipo}})</span>
                                 <ion-icon class="iconTitle" name="leaf-outline"></ion-icon></div> 
                             </ion-card-title>
                         </ion-card-header>
