--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -58,7 +58,7 @@
                             </ion-card-title>
                         </ion-card-header>
                         <ion-card-content>
-                            <img class="foto" [src]="item.url[0].url" [alt]="item.nombre" />
+                            <img class="foto" [src]="item.imagenPrincipal" [alt]="item.nombre" />
                             <div>
                                 <div class="distancia">
                                     <ion-label slot="start">100 metros</ion-label>
