--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -14,7 +14,7 @@
 <ion-content>
     <div class="padre">
         <div class="diva" >
-            <img class="imgPrincipal" id="foto" src="{{ imagenes }}" />
+            <img class="imgPrincipal" id="foto" src="{{ imagenPrincipal }}" />
         </div>
         <div class="divb">
             <ion-slides class="slidePadre" pager="true" [options]="slideOpts">
@@ -53,7 +53,7 @@
         <h5 class="interes">Te puede interesar</h5>
         <div class="divf">
             <div class="sugerencia" [routerLink]="['/home']">
-                <img class="sug" src="https://firebasestorage.googleapis.com/v0/b/appdominga.appspot.com/o/0%2Ffincapiedra-01.jpg?alt=media&token=7cbc502b-13fc-4b19-b1b5-6bf30aea69c3" alt="" width="40%" height="60%">
+                <img class="sug" src="https://firebasestorage.googleapis.com/v0/b/appdominga.appspot.com/o/lugares%2Ffincapiedra-01.jpg?alt=media&token=7cbc502b-13fc-4b19-b1b5-6bf30aea69c3" alt="" width="40%" height="60%">
                 <div class="infoSug">
                     <div class="sugNombre">Nombre</div>
                     <div class="sugDireccion">Direccion</div>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="sugerencia" [routerLink]="['/home']">
-                <img class="sug" src="https://firebasestorage.googleapis.com/v0/b/appdominga.appspot.com/o/0%2Ffincapiedra-01.jpg?alt=media&token=7cbc502b-13fc-4b19-b1b5-6bf30aea69c3" alt="" width="40%" height="60%">
+                <img class="sug" src="https://firebasestorage.googleapis.com/v0/b/appdominga.appspot.com/o/lugares%2Ffincapiedra-01.jpg?alt=media&token=7cbc502b-13fc-4b19-b1b5-6bf30aea69c3 " alt="" width="40%" height="60%">
                 <div class="infoSug">
                     <div class="sugNombre">Nombre</div>
                     <div class="sugDireccion">Direccion</div>
