se agrega la ubicación del usuario en el mapa

--- a/src/app/pages/urban-circuit/urban-circuit.page.html
+++ b/src/app/pages/urban-circuit/urban-circuit.page.html
@@ -5,6 +5,6 @@
 </ion-header>
 <ion-content>
     <div id="contenedor">
-        <div id="mapaUrbano"></div>
+        <div id="mapaBox"></div>
     </div>
 </ion-content>
