--- a/src/app/pages/places/places.page.scss
+++ b/src/app/pages/places/places.page.scss
@@ -146,6 +146,10 @@ ion-title {
 .numTelefono{
     font-weight: 100;
 }
+
+#key{
+    display: none;
+}
 // .estrellas{
 // 	text-align: right;
 // }
