--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -23,7 +23,7 @@
         <div class="divb">
             <ion-slides class="slidePadre" pager="true" [options]="slideOpts">
                 <ion-slide class="slideHijo" *ngFor="let img of imagenes">
-                    <div id="imagenMini"><img (click)=cambiarImagen() class="imgGaleria" alt="{{ img.nombre }}" src="{{ img.url }}" /></div>
+                    <div id="imagenMini"><img (click)=cambiarImagen() class="imgGaleria" src="{{ img.url }}" /></div>
                 </ion-slide>
             </ion-slides>
         </div>
@@ -38,22 +38,17 @@
                 <div class="iconEstilos" *ngIf="caminar == 1">
                     <ion-icon name="walk-outline"></ion-icon>
                 </div>
+                <div class="estrellas"><ion-rating [rate]="totalValoracion" readonly="true" size="small">
+                </ion-rating></div>  
             </div>
             <p class="text">{{descripcion}}<a class="verMas" [routerLink]="['/descripcion', key]">Ver más</a></p>
         </div>
         <div class="divd">
             <div id="mapaBox"></div>
         </div>
-        <div class="dive">
+        <!-- <div class="dive">
             <div class="distancia">100 mts</div>
-            <div class="estrellas">
-                <ion-icon name="star-outline"></ion-icon>
-                <ion-icon name="star-outline"></ion-icon>
-                <ion-icon name="star-outline"></ion-icon>
-                <ion-icon name="star-outline"></ion-icon>
-                <ion-icon name="star-outline"></ion-icon>
-            </div>
-        </div>
+        </div> -->
         <h5 class="interes">Te puede interesar</h5>
         <div class="divf">
             <div class="sugerencia" [routerLink]="['/home']">
