--- a/src/app/pages/urban-circuit/urban-circuit.page.html
+++ b/src/app/pages/urban-circuit/urban-circuit.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-    <ion-toolbar>
-        <ion-title>urban_circuit</ion-title>
+    <ion-toolbar color="circuits">
+        <ion-title>Circuito Urbano</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
