--- a/src/app/pages/rural-circuit/rural-circuit.page.html
+++ b/src/app/pages/rural-circuit/rural-circuit.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-    <ion-toolbar>
-        <ion-title>rural_circuit</ion-title>
+    <ion-toolbar color="circuits">
+        <ion-title>Circuito Rural</ion-title>
     </ion-toolbar>
 </ion-header>
 <ion-content>
