se creao: centrarmapa, maxmin, calcularzoom, calculardistancia

--- a/src/app/pages/rural-circuit/rural-circuit.page.html
+++ b/src/app/pages/rural-circuit/rural-circuit.page.html
@@ -4,7 +4,9 @@
     </ion-toolbar>
 </ion-header>
 <ion-content>
+    <p>{{ distancia }} Km</p>
     <div id="contenedor">
         <div id="mapaBox"></div>
     </div>
+    
 </ion-content>
