mostrando posicion en pantalla

--- a/src/app/pages/rural-circuit/rural-circuit.page.html
+++ b/src/app/pages/rural-circuit/rural-circuit.page.html
@@ -4,7 +4,7 @@
     </ion-toolbar>
 </ion-header>
 <ion-content>
-    <p> Km</p>
+    <p > {{ posicion$ | async | json }} </p>
     <div id="contenedor">
         <div id="mapaBox"></div>
     </div>
