--- a/src/app/pages/places/places.page.html
+++ b/src/app/pages/places/places.page.html
@@ -52,7 +52,7 @@
                 <img class="sug" src="{{ s.imagenPrincipal }}" alt="" width="40%" height="60%">
                 <div class="infoSug">
                     <div class="sugNombre">{{ s.nombre }}</div>
-                    <div class="sugDireccion"></div>
+                    <div class="sugDireccion">{{ s.distancia }} km desde {{ nombre }}</div>
                     <div class="sugTelefono">
                         <div></div>
                         <div class="numTelefono"></div>
